[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["nick <yxiao196@gmail.com>"]
description = "A key-value store"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = "3.1.12"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "1.0"





[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"